# pdupuis-py-package-template

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
.template/: init.py  init.sh
src/${project_name}/: __init__.py
