[project]
name = "${package_name}"
version = "0.1.0"
description = "${description}"
authors = [
    {name = "${author}", email = "${email}"},
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/${github_username}/${package_name}"
Repository = "https://github.com/${github_username}/${package_name}"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/${import_name}"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
fixable = ["ALL"]
ignore = ["E501"]